k8s/kustomize/overlays/kind/extra/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microservices-ingress
  namespace: ms-ddd-kafka
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
    - host: orders.local
      http:
        paths:
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: order-service
                port:
                  name: http
    - host: payments.local
      http:
        paths:
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: payment-service
                port:
                  name: http
    - host: notify.local
      http:
        paths:
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: notification-service
                port:
                  name: http
